InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteGroupClassContribution__c/vlocity_ins__QuoteGroupClassContribution__c.object-meta.xml
<CustomObject>
    <description>Represents override group class contributions to the Quote. Used for Quote level write-in overrides on a group class contribution. Master-detail child object of Quote.</description>
    <label>Quote Group Class Contribution</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Group Class Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>