InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteGroupClassContribution__c/fields/vlocity_ins__ContributionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContributionType__c</fullName>
    <description>Defines the type of the contribution in which an employer or a group will contribute towards the plan such as percentage of the cost or a flat amount.</description>
    <label>Contribution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>