InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteGroupClassContribution__c/fields/vlocity_ins__GroupClassContributionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupClassContributionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the GroupClassContribution for which the write-in override is defined.</description>
    <label>Group Class Contribution</label>
    <referenceTo>vlocity_ins__GroupClassContribution__c</referenceTo>
    <relationshipLabel>Quote Group Class Contributions</relationshipLabel>
    <relationshipName>QuoteGroupClassContributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>