InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteGroupClassContribution__c/fields/vlocity_ins__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuoteId__c</fullName>
    <description>Id of the related quote</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Group Class Contributions</relationshipLabel>
    <relationshipName>QuoteGroupClassContributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>